--- a/meet_3/task_1/index.html
+++ b/meet_3/task_1/index.html
@@ -11,10 +11,10 @@
             <h2>Вивести на сторінку в один рядок через кому числа від 10 до 20.</h2>
             <p>Уважно: не забувайте використовувати тернарні оператори, за потреби</p>
             <h3>Написати цикли, які зможуть:</h3>
-            <ul>
+            <ol>
                 <li>
                     <h4>Вивести на сторінку в один рядок через кому числа від 10 до 20.</h4>
-                    <p></p>
+                    <p id="output"></p>
                 </li>
                 <li>
                     <h4>
@@ -88,7 +88,7 @@
                     </h4>
                     <p></p>
                 </li>
-            </ul>
+            </ol>
         </section>
         
     </body>
